--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.15.12",
+    "@types/three": "^0.159.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
