:construction_worker: Fix CI

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,9 @@ services:
     image: ndi-frontend-image
     ports:
       - "3000:80"
+    networks:
+      - bw-services
+
+networks:
+  bw-services:
+    external: true
